other/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-secret-service-account-token-type
  annotations:
    policies.kyverno.io/title: Deny Secret Service Account Token Type
    policies.kyverno.io/category: Security
    kyverno.io/kubernetes-version: "1.27"
    kyverno.io/kyverno-version: 1.11.1
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Secret, ServiceAccount
    policies.kyverno.io/description: >-
      Before version 1.24, Kubernetes automatically generated Secret-based tokens 
      for ServiceAccounts. When creating a Secret, you can specify its type using the 
      type field of the Secret resource . The type kubernetes.io/service-account-token
      is used for legacy ServiceAccount tokens . These legacy Tokens can
      be of security concern and should be audited.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: deny-secret-service-account-token-type
    match:
      any:
      - resources:
          kinds:
          - Secret
    validate:
      message: "Secret ServiceAccount token type is not allowed."
      pattern:
        =(type): '!kubernetes.io/service-account-token'
